Add streaming protocol API and acquisition safety docs
Introduces new documentation for LiveViewController acquisition safety and streaming protocol API. Adds protocol tracking endpoints to LiveViewController, improves thread safety and reference counting for detector acquisition, refactors WebRTC event loop handling, and fixes logic for stream parameter updates. Minor changes to SettingsController and DetectorsManager for improved initialization and debugging.

--- a/imswitch/_data/static/imswitch/webrtc_stream.html
+++ b/imswitch/_data/static/imswitch/webrtc_stream.html
@@ -228,7 +228,7 @@
                 const url = `${serverUrl}/LiveViewController/webrtc_offer`;
                 const params = {
                     sdp: pc.localDescription.sdp,
-                    sdp_type: pc.localDescription.type  // Changed from 'type' to 'sdp_type'
+                    sdp_type: pc.localDescription.type
                 };
                 
                 if (detectorName) {
